--- a/src/app/features/profile/dashboard-page/overview/overview.component.html
+++ b/src/app/features/profile/dashboard-page/overview/overview.component.html
@@ -46,8 +46,9 @@
   </div>
   <div class="dashboard-footer">
     <p>&copy; {{ currentYear }} Nayborly. All rights reserved.</p>
-    <p>Follow us on <a href="https://twitter.com/nayborly" target="_blank" rel="noopener noreferrer">Twitter</a>
-      and <a href="http://instagram.com/nayborly" target="_blank" rel="noopener noreferrer">Instagram</a> for updates.</p>
+    <p>Follow us on <a href="https://twitter.com/nayborly" rel="noopener noreferrer" target="_blank">Twitter</a>
+      and <a href="http://instagram.com/nayborly" rel="noopener noreferrer" target="_blank">Instagram</a> for updates.
+    </p>
     <p>Need help? Visit our <a [routerLink]="APP_ROUTES.INTRO.CONTACT">Contact</a> page.</p>
   </div>
 </div>
