--- a/src/app/features/profile/dashboard-page/users/edit-user-dialog/edit-user-dialog.component.html
+++ b/src/app/features/profile/dashboard-page/users/edit-user-dialog/edit-user-dialog.component.html
@@ -1,13 +1,13 @@
 <h2 mat-dialog-title>Edit User</h2>
-<form [formGroup]="form" (ngSubmit)="onSave()" mat-dialog-content>
+<form (ngSubmit)="onSave()" [formGroup]="form" mat-dialog-content>
   <mat-form-field appearance="fill" class="full-width">
     <mat-label>Name</mat-label>
-    <input matInput formControlName="name" required />
+    <input formControlName="name" matInput required/>
   </mat-form-field>
 
   <mat-form-field appearance="fill" class="full-width">
     <mat-label>Email</mat-label>
-    <input matInput formControlName="email" required />
+    <input formControlName="email" matInput required/>
   </mat-form-field>
 
   <mat-form-field appearance="fill" class="full-width">
@@ -26,12 +26,12 @@
 
   <mat-form-field appearance="fill" class="full-width">
     <mat-label>Joined Date</mat-label>
-    <input matInput formControlName="createdAt" required />
+    <input formControlName="createdAt" matInput required/>
   </mat-form-field>
 
-  <div mat-dialog-actions align="end">
-    <button mat-button type="button" (click)="onCancel()">Cancel</button>
-    <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid">Save</button>
+  <div align="end" mat-dialog-actions>
+    <button (click)="onCancel()" mat-button type="button">Cancel</button>
+    <button [disabled]="form.invalid" color="primary" mat-flat-button type="submit">Save</button>
   </div>
 </form>
 
